src/assets/css/style.css
    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600;800&display=swap');
    :root{
        --fontWeightLight:200;
        --fontWeightRegular:400;
        --fontWeightBold:600;
        --fontWeightBlack:800;
        --fontFamily:'Poppins', sans-serif;
        --fontColorPrimay:#0057FF;
        --fontColorSecondary:orange;
        --bgColorPrimary:#EEEEEE;
        --bgColorSecondary:#0057FF;
        --btnBgColor:orange;
        --btnColorText:white;
        --boxShadow:rgba(0, 0, 0, 0.24) 0px 3px 8px; 
        --line-height: 1.5rem;
        --transition:0.3s;
        --marginBootom:1.5rem;
    }
    *{
        padding: 0;
        margin: 0;
        box-sizing: border-box;
    }

    html{
        scroll-behavior: smooth;
    }
    body{
        font-family: var(--fontFamily);
        font-size: 15px;
        position: relative;
    
    }
    a{
        text-decoration: none;
        color: var(--fontColorPrimay);
        cursor: pointer;
    }
    ul{
        list-style: none;
    }
    p{
        line-height: var(--line-height);

    }
    /* common classes  */
    .section-title{
        margin-bottom: var(--marginBootom);
    }
    .sectionText{
        max-width: 400px;
    }
    .section-sep{
        padding:3rem;
        background-color: var(--bgColorSecondary);
    }
    /* navigation section  */
    .navigation{
        display: flex;
        align-items: center;
        background: white;
        justify-content: space-between;
        padding: 1.3rem 2.1rem;
        box-shadow: var(--boxShadow);
        
    }
    .menu .link-item a{
        text-transform: uppercase;
        font-size: 14.21px;
        font-weight: bold;
        margin-right: 23px;
      
       
    }
    ul.menu li.link-item a:active{
        transition: color ease-in-out var(--transition);
        background :red;
    }
    ul.menu li.link-item a:hover{
        color: var(--fontColorSecondary);
    }
   
    .navigation h1{
        font-weight: var(--fontWeightBlack);
        font-size: 23px;
    }
    .navigation .link-item{
        display: inline-block;
        
        font-weight:var(--fontWeightBold) ;

    }
    .navigation .menu-icon{
        display: none;
    }
    /* hero section  */
    .hero{
        padding: 6rem;
        position: relative;
    }
    .hero .container{
        display: flex;
        align-items: center;
        justify-content: center;
        gap: 6rem;
        flex-wrap: 1;
    }

    .hero .container .hero-img{
        max-width: 50%;
    }

    .more-about{
        padding: 6rem;
        /* background-color: #EEEEEE; */
        background-color:#d3d3d31a ;
    }
    .more-about .box{
        background-color: white;
        padding: 3rem;
        border-radius: 5px;
        box-shadow: var(--boxShadow);
    }
    .more-about .container{
        display: flex;
        align-items: center;
        justify-content: center;
        gap: 6rem;
    }
    .more-about .container .more-about-img{
        max-width: 50%;
    }
    .more-info{
        padding: 6rem 6rem 0;
    }

    .more-info .container{
        position: relative;
        display: flex;
        align-items: center;
        justify-content: center;
        gap: 6rem;
    }
    .more-info-text .section-text, .more-info-img{
        max-width: 400px;
    }
    .more-info-img{
    
        max-width: 50%;
        margin-bottom: -96px
    }
    /* section feature  */
    .features{
        padding: 0 3rem;
        background-color: white;
    }
    .features .section-title{
        text-align: center;
    }
    .features .container{
        display: flex;
        align-items: center;
        justify-content: center;
        gap: 3rem;
        padding: 3rem 0;
        flex-wrap: wrap;
    }
    .feature{
        border: 1px solid lightgray;
        padding: 2.3rem;
        display: flex;
        align-items: center;
        width: 31rem;
        box-shadow: var(--boxShadow);
    }
    .feature .icon{
        width: 6rem;
    }
    .feature p{
        display: inline-block;
        /* margin-left: 1.3rem; */
        line-height: var(--line-height);
    
    }
    /* section skills  */
    .skills{
        margin: auto;
        padding: 0rem 3rem;
        
        text-align: center;
        margin-top: 2.5rem;
        /* background-color: var(--bgColorPrimary); */
        background-color:#d3d3d31a ;
    }
    .skills .skills-warpper{
        padding: 3rem;
    }
    .skills-warpper img{
        padding: 1.25rem;
    }
    .icon-card{
        background-color: #fff;
        border-radius: 11px;
        box-shadow: 0 3px 10px var(--boxShadow);
        padding: 2.3rem;
        margin: 10px;
        width: 9rem;
        height: 9rem;
    }
    /* section projects  */
    .projects{
        padding: 0 3rem;
        background-color: white;
        height: auto;
        position: relative;
        text-align: center;
    }
    .projects .section-title{
        text-align: center;
    }
    .projects .contianer{
        display: flex;
    align-items: center;
    flex-wrap: wrap;
    gap: 0.5rem;
    padding: 3rem 0.5rem;
    justify-content: center;
    }
    .projects .contianer .project-card{
        border-radius: 11px;
        box-shadow: var(--boxShadow);
        padding:19px;
        margin: 20px;
        background-color: white;
        max-width: 18rem;
        text-align: center;
        height: 370px;
    }

    .project-card .project-img{
        max-width: 13rem;
    }
    .projects .contianer .project-card .project-title{
        /* text-align: left; */
        margin-top:0.7rem;
    }
    .projects .contianer .project-card .project-description{
        /* text-align: left; */
        height: 122px;
        margin: 0.7rem 0;
    }
    .project-cart .project-details{
    
            margin-bottom: var(--bottom-margin);
        
    }
/* ... */

